Changes for Linux and Windows version 2.0.7
--------------------------------------------------------------------

- Fixed the proxy support for the download manager

Changes for Linux and Windows version 2.0.6
--------------------------------------------------------------------

- The update process will now allow us to update system files and
  files that do not have version info, such as the help files.
- We squashed the huge memory leak some people were seeing.
- ShoutCast title streaming is now supported.

Changes for Linux and Windows version 2.0.5
--------------------------------------------------------------------

- More bugfixes than you can shake a stick at.
- Fixed VBR file playback problem
- Fixed problem where seek slider sometimes jumped back to its 
  original position during a seek.
- Changed Download Manager to use non-blocking IO so that FreeAmp
  always exits cleanly, even if it is stuck in a connect()

Changes for Linux and Windows version 2.0.4
--------------------------------------------------------------------

- No new features, just lots and lots of bug fixes.

Changes for Linux and Windows version 2.0.3
--------------------------------------------------------------------

- Help files on Linux work again.
- Changing window modes in a theme work again.
- A bug in the Linux 'My Music' file selection/import was fixed.

Changes for Linux and Windows version 2.0.2
--------------------------------------------------------------------

- Improved speed for adding and removing items in My Music window.
- Fixes issues with Windows 2000 compatability.
- Importing Tracks works again.
- FreeAmp now associates itself with .fat files under Windows.
- Fixed buffer bug in windows output plugin.
- Fixed slider issues.
- Themes now support a miscellaneous comment field that will be 
  displayed in the credits for the theme.
- FreeAmp is now bound to processor 0 under Windows NT.
- Fix for "Not saving theme" bug under Linux.