@@ -18,7 +18,7 @@
         along with this program; if not, write to the Free Software
         Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
-        $Id: musicbrowser.cpp,v 1.23.2.1.2.1.2.1 2000/03/20 23:51:55 ijr Exp $
+        $Id: musicbrowser.cpp,v 1.23.2.1.2.1.2.1.2.1 2000/04/09 15:56:42 ijr Exp $
 ____________________________________________________________________________*/
 
 #include "musicbrowserui.h"
@@ -99,6 +99,7 @@ void MusicBrowserUI::GTKEventService(void)
     if (!m_context->gtkInitialized) {
         m_context->gtkInitialized = true;
         g_thread_init(NULL);
+        gtk_set_locale();
         gtk_init(&m_argc, &m_argv);
         gdk_rgb_init();
         weAreGTK = true;
